[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rayon = "1.10"
thread = "0.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "async_thread"
path = "src/async_thread.rs"

[[bin]]
name = "sync_counter"
path = "src/sync_counter.rs"

[[bin]]
name = "async_task"
path = "src/async_task.rs"

[[bin]]
name = "producer_consumer"
path = "src/producer_consumer.rs"

[[bin]]
name = "display"
path = "src/display.rs"

[[bin]]
name = "t"
path = "src/t.rs"

[[bin]]
name = "trait"
path = "src/trait.rs"

[[bin]]
name = "option"
path = "src/option.rs"

[[bin]]
name = "define_error"
path = "src/define_error.rs"

[[bin]]
name = "error_chain"
path = "src/error_chain.rs"

[[bin]]
name = "axum"
path = "src/axum.rs"

[[bin]]
name = "sqlx"
path = "src/sqlx.rs"
